fixed spacing with paragraph in Faq section

--- a/next/src/components/_global/Faq/Faq.module.scss
+++ b/next/src/components/_global/Faq/Faq.module.scss
@@ -15,7 +15,7 @@
   .Form {
     grid-area: form;
     @media (max-width: 899px) {
-      > p {
+      > .paragraph {
         margin-top: 64px;
       }
     }
